<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/help_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/help_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">


            <TextView
                android:id="@+id/help_textView_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_title"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/help_textView_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_1"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/help_textView_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/help_textView_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_3"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/help_textView_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_4"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/help_textView_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_5"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/help_textView_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_6"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/help_textView_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_7"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/help_textView_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_8"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/help_textView_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_9"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/help_textView_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/help_10"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>