<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/setting_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setting_textView_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/setting_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_toolbar" />

    <ScrollView
        android:id="@+id/setting_scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_textView_title">

        <LinearLayout
            android:id="@+id/setting_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent">


            <TextView
                android:id="@+id/setting_textView_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_method" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/setting_toggleButton_Bluetooth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:alpha="0.5"
                    android:background="#000000"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textOff="@string/setting_method_toggle_bluetooth"
                    android:textOn="@string/setting_method_toggle_bluetooth" />

                <ToggleButton
                    android:id="@+id/setting_toggleButton_BLE"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:alpha="0.5"
                    android:background="#000000"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textOff="@string/setting_method_toggle_ble"
                    android:textOn="@string/setting_method_toggle_ble" />

            </LinearLayout>

            <TextView
                android:id="@+id/setting_textView_uuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_uuid"
                tools:ignore="MissingClass" />

            <EditText
                android:id="@+id/setting_editText_uuid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/setting_uuidhint"
                android:inputType="text"
                android:maxLength="36"
                android:maxLines="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />

                <Button
                    android:id="@+id/setting_button_uuid_clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/setting_button_clear"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/setting_button_uuid_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/setting_button_default"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/setting_button_uuid_apply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/setting_button_apply"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/setting_textView_uuid_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_uuid_service" />

            <EditText
                android:id="@+id/setting_editText_uuid_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/setting_uuidhint"
                android:inputType="text"
                android:maxLength="36"
                android:maxLines="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />

                <Button
                    android:id="@+id/setting_button_uuid_service_clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/setting_button_clear"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/setting_button_uuid_service_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/setting_button_default"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/setting_button_uuid_service_apply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/setting_button_apply"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/setting_textView_uuid_characteristic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_uuid_characteristic" />

            <EditText
                android:id="@+id/setting_editText_uuid_characteristic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/setting_uuidhint"
                android:inputType="text"
                android:maxLength="36"
                android:maxLines="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />

                <Button
                    android:id="@+id/setting_button_uuid_characteristic_clear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/setting_button_clear"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/setting_button_uuid_characteristic_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/setting_button_default"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/setting_button_uuid_characteristic_apply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/setting_button_apply"
                    android:textSize="12sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/setting_textView_sendMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_sendmax" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/setting_numPicker_sendMax1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0" />

                <NumberPicker
                    android:id="@+id/setting_numPicker_sendMax2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0" />

                <NumberPicker
                    android:id="@+id/setting_numPicker_sendMax3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0" />

                <NumberPicker
                    android:id="@+id/setting_numPicker_sendMax4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3" />

                <Button
                    android:id="@+id/setting_button_sendMax_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:text="@string/setting_button_default"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/setting_button_sendMax_apply"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.45"
                    android:text="@string/setting_button_apply"
                    android:textSize="12sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/setting_textView_xaxis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_xaxis" />

            <Switch
                android:id="@+id/setting_switch_xaxis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_xaxis_switch" />

            <TextView
                android:id="@+id/setting_textView_yaxis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_yaxis" />

            <Switch
                android:id="@+id/setting_switch_yaxis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_yaxis_switch" />

            <TextView
                android:id="@+id/setting_textView_threshold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_threshold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4" />

                <Spinner
                    android:id="@+id/setting_spinner_threshold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.7"
                    android:textAlignment="textEnd"
                    android:entries="@array/setting_threshold_array" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:text="％" />

        </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>